# run-clang-tidy

./: .gitignore  Cargo.toml  LICENSE  _typos.toml  build.rs  deny.toml  readme.md
.github/setup/: load_artifacts_macos.sh  load_artifacts_ubuntu.sh  load_artifacts_windows.bat
.github/workflows/: ci.yml  release.yml  stale.yml
src/: globs.rs  lib.rs  main.rs  resolve.rs
src/cli/: handlers.rs  logging.rs  mod.rs  utils.rs
src/cmd/: mod.rs
src/lib/: globs.rs  mod.rs  resolve.rs
test-files/: readme.md
test-files/c-demo/.hidden/: hidden.c  hidden.h
test-files/c-demo/pkg_a/module_a/: module_a.c  module_a.h
test-files/c-demo/pkg_b/module_b/: module_b.c  module_b.h
test-files/c-demo/pkg_b/module_c/: module_c.c  module_c.h
test-files/c-demo/pkg_b/module_fix/: module_fix.c  module_fix.h
test-files/c-demo/project/: makefile
test-files/c-demo/project/make/: make.mak  make_flags.mak  make_folders.mak  make_tools.mak  parse_build.py
test-files/c-demo/project/src/: main.c  std_types.h
test-files/c-demo/subfolder/pkg_c/module_sub_a/: module_sub_a.c  module_sub_a.h
test-files/c-demo/subfolder/pkg_c/module_sub_b/: module_sub_b.c  module_sub_b.h
test-files/c-demo/subfolder/pkg_c/module_untidy/: module_untidy.c  module_untidy.h
test-files/c-demo/subfolder/pkg_c/module_unused/: module_unused.c  module_unused.h
test-files/clang-tidy/: .clang-tidy  named.clang-tidy  some.file
test-files/json/: test-err-empty.json  test-err-fix.json  test-err-invalid-command-file.json  test-err-invalid-command-name.json  test-err-invalid-command.json  test-err-invalid-glob.json  test-err-invalid-tidy-file.json  test-err-invalid-tidy-path.json  test-err-invalid-tidy-root.json  test-err-missing-build-root.json  test-err-no-tidy-root.json  test-err-root-invalid.json  test-err-root-missing.json  test-ok-empty-paths.json  test-ok-tidy-and-command-name.json  test-ok-tidy-and-command.json  test-ok-tidy-named.json  test-ok-tidy.json  tidy.json
tests/: invoke.rs  readme.md
