[package]
name = "run-clang-tidy"
version = "0.1.3"
authors = ["Martin Lampacher <lmapii@gmail.com>"]
description = """
Cross platform CLI wrapper for executing clang-tidy based paths or globs specified
in a JSON input file.
"""
# documentation = "https://docs.rs/run-clang-tidy"
homepage = "https://github.com/lmapii/run-clang-tidy"
repository = "https://github.com/lmapii/run-clang-tidy"
keywords = ["clang-tidy", "glob", "search"]

license-file = "LICENSE"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
schemars = "0.8.8"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false, features = ["capture-spantrace"] }
regex = "1.5.5"
scopeguard = "1.1.0"
# globmatch = { path = "../globmatch" }
globmatch = "0.2"
rayon = "1.5"
# indicatif = { git = "https://github.com/console-rs/indicatif", branch = "main"}
indicatif = "0.17"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }

[dev-dependencies]
doc-comment = "0.3"
assert_cmd = "2.0.4"

# [profile.release]
# strip="debuginfo"
# error: failed to run custom build command for `libc v0.2.123`
# Caused by:
#   process didn't exit successfully: `/path/to/run-clang-tidy/target/release/build/libc-f010f5927a4f70bf/build-script-build` (signal: 9, SIGKILL: kill)