[package]
name = "run-clang-tidy"
version = "0.3.0"
authors = ["Martin Lampacher <lmapii@gmail.com>"]
description = """
Cross platform CLI wrapper for executing clang-tidy based paths or globs specified
in a JSON input file.
"""
# documentation = "https://docs.rs/run-clang-tidy"
homepage = "https://github.com/lmapii/run-clang-tidy"
repository = "https://github.com/lmapii/run-clang-tidy"
keywords = ["clang-tidy", "glob", "search"]

license-file = "LICENSE"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
# env_logger 0.11 is available but removes built-in color styling ...
env_logger = "0.10"
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false, features = [
    "capture-spantrace",
] }
regex = "1.11"
scopeguard = "1.2"
# globmatch = { path = "../globmatch" }
globmatch = "0.3"
rayon = "1.10"
# indicatif = { git = "https://github.com/console-rs/indicatif", branch = "main"}
indicatif = "0.17"
console = { version = "0.15", default-features = false, features = [
    "ansi-parsing",
] }

[dev-dependencies]
doc-comment = "0.3"
assert_cmd = "2.0"

[profile.release]
strip = true
# strip="debuginfo"
